feat: add Apple Health sync
